--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,11 +1,14 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <!-- <link rel="icon" type="image/svg+xml" href="/vite.svg" /> -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:wght@300&family=Didact+Gothic&family=EB+Garamond&family=Lora&family=Marcellus&family=Nanum+Myeongjo&family=Noto+Serif+JP:wght@300&family=Orbitron&family=Playfair+Display&family=Poppins:wght@200&family=Quattrocento+Sans&family=Quicksand&family=Raleway:wght@300&family=Red+Hat+Display:wght@300&family=Shadows+Into+Light&family=Teko&display=swap" rel="stylesheet">
-    <title>Vite + React</title>
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;500;800&display=swap"
+      rel="stylesheet"
+    />
+    <title>2F shop</title>
   </head>
   <body>
     <div id="root"></div>
